# mantrana

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  gitkey  gitkey.pub  heroku.yml
Client/: CMakeLists.txt  main.cpp
Client/Window/: ChatWindow.ui
Server/: CMakeLists.txt  ChatWebSocketListener.h  main.cpp
client/: AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  CMakeLists.txt  ChatConnection.cpp  ChatConnection.h  ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  Connection.cpp  main.cpp
doxy/html/: _auth_dialog_8cpp.html  _auth_dialog_8cpp_8o_8d.html  _auth_dialog_8cpp__incl.map  _auth_dialog_8cpp__incl.md5  _auth_dialog_8h.html  _auth_dialog_8h__dep__incl.map  _auth_dialog_8h__dep__incl.md5  _auth_dialog_8h__incl.map  _auth_dialog_8h__incl.md5  _auth_dialog_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _chat_connection_8cpp.html  _chat_connection_8cpp_8o_8d.html  _chat_connection_8cpp__incl.map  _chat_connection_8cpp__incl.md5  _chat_connection_8h.html  _chat_connection_8h__dep__incl.map  _chat_connection_8h__dep__incl.md5  _chat_connection_8h__incl.map  _chat_connection_8h__incl.md5  _chat_connection_8h_source.html  _chat_web_socket_listener_8cpp.html  _chat_web_socket_listener_8cpp_8o_8d.html  _chat_web_socket_listener_8cpp__incl.map  _chat_web_socket_listener_8cpp__incl.md5  _chat_web_socket_listener_8h.html  _chat_web_socket_listener_8h__dep__incl.map  _chat_web_socket_listener_8h__dep__incl.md5  _chat_web_socket_listener_8h__incl.map  _chat_web_socket_listener_8h__incl.md5  _chat_web_socket_listener_8h_source.html  _chat_window_8cpp.html  _chat_window_8cpp_8o_8d.html  _chat_window_8cpp__incl.map  _chat_window_8h.html  _chat_window_8h__dep__incl.map  _chat_window_8h__dep__incl.md5  _chat_window_8h__incl.map  _chat_window_8h_source.html  (+298 more)
doxy/rtf/: _chat_window_8cpp__incl.md5  _chat_window_8h__incl.md5  _client_8h__dep__incl.md5  _config_8cpp__incl.md5  _config_8h__dep__incl.md5  _config_8h__incl.md5  _connection_8h__dep__incl.md5  _message_handler_8cpp__incl.md5  (+58 more)
server/: Client.h  Config.cpp  Config.h  WebSocketListener.h  main.cpp
(+280 files in other folders)
